[feat] Updates main structure and assets

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <audio id="music" src="/music/background.mp3" loop></audio>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
